Solve horizontal overflow resolution by reducing map size on mobile. Now this part is responsive down to 320px (iPhone 1 resolution)

--- a/index.css
+++ b/index.css
@@ -98,16 +98,16 @@ h1 {
 
 .salmon-panel img,
 .gray-panel img {
-  width: 10rem;
-  height: 10rem;
+  width: 9rem;
+  height: 9rem;
   border-radius: 50%;
-  margin: 1rem 1rem;
+  margin: 3rem 1rem;
 }
 
 .blue-panel img {
-  width: 10rem;
-  height: 10rem;
-  margin: 1rem 1rem;
+  width: 9rem;
+  height: 9rem;
+  margin: 3rem 1rem;
 }
 
 .black-bar {
@@ -178,6 +178,8 @@ h1 {
 
 .map {
   border: 1px solid gray;
+  width: 300px;
+  height: 200px;  
 }
 
 .fa-shield-alt {
@@ -194,6 +196,7 @@ h1 {
 .institution-info span {
   font-size: 0.8rem;
 }
+
 
 /* Media queries */
 
@@ -236,6 +239,12 @@ h1 {
     width: 15rem;
     height: 15rem;
     margin: 2rem 3rem;
+  }
+
+  .map {
+    border: 1px solid gray;
+    width: 600px;
+    height: 350px;  
   }
 }
 
